# DatabaseBenchmark

./: Cargo.toml  README.md  RESULTS.md
src/: harness.rs  main.rs
src/suites/: diesel_postgres.rs  diesel_schema.rs  diesel_sqlite.rs  duckdb_duckdb.rs  mod.rs  redb_redb.rs  rusqlite_sqlite.rs  rusqlite_sqlite_memory.rs  rusqlite_sqlite_readonly.rs  seaorm_entities.rs  seaorm_postgres.rs  seaorm_sqlite.rs  sqlx_postgres.rs  sqlx_sqlite.rs  tokio_postgres_pg.rs
